<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutIBit"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@color/web20c4"
        android:text="@string/isbitirme"/>
    <LinearLayout
        android:background="@drawable/border_isbitirme"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:paddingLeft="3dp"
            android:gravity="center_vertical"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:text="@string/ibasbarkod"/>
        <TextView android:id="@+id/ibitbarkod"
            android:layout_width="match_parent"
            android:layout_height="30dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <Button android:id="@+id/ibitbarkodoku"
            android:gravity="center_horizontal"
            android:text="@string/ibasbarkodoku"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@drawable/border_isbitirme">
        <TextView
            android:paddingLeft="3dp"
            android:gravity="center_vertical"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:text="@string/ibasbolge"/>
        <TextView android:id="@+id/ibitbolge"
            android:layout_width="match_parent"
            android:layout_height="30dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@drawable/border_isbitirme">
        <TextView
            android:paddingLeft="3dp"
            android:gravity="center_vertical"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:text="@string/ibascalisma"/>
        <TextView android:id="@+id/ibitcalisma"
            android:layout_width="match_parent"
            android:layout_height="30dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@drawable/border_isbitirme">
        <TextView
            android:paddingLeft="3dp"
            android:gravity="center_vertical"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:text="@string/ibasfirma"/>
        <TextView android:id="@+id/ibitfirma"
            android:layout_width="match_parent"
            android:layout_height="30dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@drawable/border_isbitirme">
        <TextView
            android:paddingLeft="3dp"
            android:gravity="center_vertical"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:text="@string/ibasyetkili"/>
        <TextView android:id="@+id/ibityetkili"
            android:layout_width="match_parent"
            android:layout_height="30dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@drawable/border_isbitirme">
        <TextView
            android:paddingLeft="3dp"
            android:gravity="center_vertical"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:text="@string/ibasekiplideri"/>
        <TextView android:id="@+id/ibitekiplideri"
            android:layout_width="match_parent"
            android:layout_height="30dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@drawable/border_isbitirme">
        <TextView
            android:paddingLeft="3dp"
            android:gravity="center_vertical"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:text="@string/ibitbastarih"/>
        <TextView android:id="@+id/ibitbastarih"
            android:layout_width="match_parent"
            android:layout_height="30dp" ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@drawable/border_isbitirme">
        <TextView
            android:paddingLeft="3dp"
            android:gravity="center_vertical"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:text="@string/ibitbittarih"/>
        <TextView android:id="@+id/ibitbittarih"
            android:layout_width="match_parent"
            android:layout_height="30dp" ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/border_isbitirme">
        <TextView
            android:paddingLeft="3dp"
            android:gravity="center_vertical"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:text="@string/ibasfisno"/>
        <TextView android:id="@+id/ibitfisno"
            android:layout_width="match_parent"
            android:textSize="15dp"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@drawable/border_isbitirme">
        <TextView
            android:paddingLeft="3dp"
            android:gravity="center_vertical"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:text="@string/ibasgorev"/>
        <TextView android:id="@+id/ibitgorev"
            android:layout_width="match_parent"
            android:layout_height="30dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/border_isbitirme"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:paddingLeft="3dp"
            android:gravity="center_vertical"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:text="@string/ibasurun"/>
        <TextView android:id="@+id/ibiturun"
            android:layout_width="match_parent"
            android:layout_height="30dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <Button android:id="@+id/ibitonay"
            android:gravity="center_horizontal"
            android:text="@string/ibasonay"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="40dp"></Button>
    </LinearLayout>
</LinearLayout>