<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutIBas2"
    android:orientation="vertical">

    <!-- Header aligned to top -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/web20c3"
            android:text="@string/isebaslama3"/>
    </RelativeLayout>

    <!-- Footer aligned to bottom -->
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border_set"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <Button android:id="@+id/ibasBtnIptal"
                android:gravity="center_horizontal"
                android:text="@string/ibasiptal"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"></Button>

            <Button android:id="@+id/ibasBtnSonraki"
                android:gravity="center_horizontal"
                android:text="@string/ibassonraki"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="35dp"></Button>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_set"
        android:layout_above="@id/footer"
        android:layout_below="@id/header" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border_set"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.35"
                android:gravity="center_vertical"
                android:text="@string/ibasservis"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:textSize="15dp"
                android:layout_weight="0.65"
                android:text="@string/ibasservissayisi"
                android:gravity="center_vertical|center_horizontal">
            </TextView>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border_set"
                android:id="@+id/ibasLayout"></LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>