<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/border_bekleyenler"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/border_gray"
        android:layout_height="30dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/wsTarih"
            android:layout_width="74dp"
            android:textSize="12sp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_height="25dp">
        </TextView>

        <TextView
            android:id="@+id/wsFisnoTitle"
            android:layout_width="45dp"
            android:layout_height="25dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/ibasfisno"
            android:textSize="12sp"></TextView>

        <TextView
            android:id="@+id/wsFisno"
            android:layout_width="105dp"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:layout_height="25dp">
        </TextView>
        <TextView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:textSize="12sp"
            android:text="@string/ibastoplam"
            android:paddingLeft="10dp"
            android:gravity="center_vertical">
        </TextView>

        <TextView
            android:id="@+id/wsToplam"
            android:layout_width="36dp"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:layout_height="25dp"
            android:layout_weight="0.55">
        </TextView>
        <TextView
            android:layout_height="30dp"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:text="@string/ibassayitakipformu"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:layout_weight="0.35">
        </TextView>
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ok"
            android:padding="5dp"
            android:id="@+id/wsImgSTF" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:text="@string/ibasekiplideri"
            android:layout_width="67dp"
            android:textSize="12sp"
            android:layout_height="25dp"
            android:gravity="center_vertical">
        </TextView>
        <TextView
            android:id="@+id/wsEkiplideri"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:layout_height="25dp"
            android:layout_weight="0.25"
            android:gravity="center_vertical">
        </TextView>
    </LinearLayout>
</LinearLayout>